added audio clip for each drum hit. and also added for comments in the code

--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,8 +58,10 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function (event){
-    alert('TEST')
+  window.addEventListener('keydown', function (event){ // listen for key down that corresponds with the drum buttons. 
+    const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`)
+    if(!audio) return; // If there's no audio for the key, don't run the function.
+    audio.play(); // Play the audio clip from the data set
   });
 </script>
 
