--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -58,10 +58,13 @@
   <audio data-key="76" src="sounds/tink.wav"></audio>
 
 <script>
-  window.addEventListener('keydown', function (event){ // listen for key down that corresponds with the drum buttons. 
-    const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`)
+  window.addEventListener('keydown', function (event){ // listen for key down that corresponds with the drum buttons.
+    const audio = document.querySelector(`audio[data-key="${event.keyCode}"]`) // Track audi that matches the key press.
+    const key = document.querySelector(`.key[data-key="${event.keyCode}"]`) // Track the key being pressed in preperation for adding the colour and resizing.
     if(!audio) return; // If there's no audio for the key, don't run the function.
+    audio.currentTime = 0; // This allows us to play the button multiple times
     audio.play(); // Play the audio clip from the data set
+    console.log(key) //
   });
 </script>
 
