--- a/02 - JS and CSS Clock/index-START.html
+++ b/02 - JS and CSS Clock/index-START.html
@@ -84,11 +84,11 @@
     secondHand.style.transform = `rotate(${secondsDegrees}deg)`; // Increasing the the rotation per second/minute/hour using transform
 
     const minutes = now.getMinutes();
-    const minutesDegrees = ((minutes / 60) * 360) + 90;
+    const minutesDegrees = ((minutes / 60) * 360) + ((seconds/60)*6) + 90;
     minHand.style.transform = `rotate(${minutesDegrees}deg)`;
 
     const hours = now.getHours();
-    const hoursDegrees = ((hours / 60) * 360) + 90;
+    const hoursDegrees = ((hours / 12) * 360) + ((mins/60)*30) + 90;
     hourHand.style.transform = `rotate(${hoursDegrees}deg)`;
 
   }
