--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -31,11 +31,7 @@
 
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-    const fifteen = inventors.filter(function(inventor) {
-      if(inventor.year >= 1500 && inventor.year <= 1599) {
-        return true; //Keep it! No need to return false.
-      }
-    });
+    const fifteen = inventors.filter(inventor => inventor.year >= 1500 && inventor.year <= 1599);
     console.table(fifteen);
 
     // Array.prototype.map()
