refactored the code for exercise 3

--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -32,17 +32,29 @@
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
     const fifteen = inventors.filter(inventor => inventor.year >= 1500 && inventor.year <= 1599);
+
     console.table(fifteen);
 
     // Array.prototype.map()
     // 2. Give us an array of the inventors' first and last names
     const fullNames = inventors.map(inventor => `${inventor.first} ${inventor.last}`);
-    console.table(fullNames);
 
+    console.table(fullNames);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
+    // var ordered = inventors.sort(function(firstPerson, secondPerson){
+    //   if(firstPerson.year > secondPerson.year) {
+    //     return 1;
+    //   } else {
+    //     return -1;
+    //   }
+    // });
+
+    var ordered = inventors.sort((a, b) => a.year > b.year ? 1 : -1); // This is a shorter version of the above code in one line.
+
+    console.table(ordered)
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live?
 
