--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -34,7 +34,13 @@
       }
     });
 
+    const isAdult = people.some(person => {
+      const currentYear = (new Date()).getFullYear();
+      return currentYear - person.year >= 19;
+    });
+
     console.log({isAdult});
+
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
