--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -40,6 +40,11 @@
 
     console.log({isAdult});
 
+    const allAdults = people.every(person => ((new Date()).
+      getFullYear()) - person.year >= 19);
+
+
+    console.log({allAdults});
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
