added a find function which searches for a particular comment ID

--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -34,12 +34,14 @@
     //   }
     // });
 
+    // Using some (on array in JS)
     const isAdult = people.some(person => ((new Date()).
       getFullYear()) - person.year >= 19);
 
 
     console.log({isAdult});
 
+    // Using every (on array in JS)
     const allAdults = people.every(person => ((new Date()).
       getFullYear()) - person.year >= 19);
 
@@ -49,6 +51,14 @@
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
+
+    const comment = comments.find(function(comment) {
+      if(comment.id === 823423){
+        return true;
+      }
+    });
+
+    console.log(comment);
 
     // Array.prototype.findIndex()
     // Find the comment with this ID
