--- a/07 - Array Cardio Day 2/index-START.html
+++ b/07 - Array Cardio Day 2/index-START.html
@@ -52,11 +52,13 @@
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
-    const comment = comments.find(function(comment) {
-      if(comment.id === 823423){
-        return true;
-      }
-    });
+    // const comment = comments.find(function(comment) {
+    //   if(comment.id === 823423){
+    //     return true;
+    //   }
+    // });
+
+    const comment = comments.find(comment => comment.id === 823423);
 
     console.log(comment);
 
