successfully created variables for the canvas

--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -8,7 +8,11 @@
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
 </script>
+const canvas = document.querySelector('#draw');
+cont ctx = canvas.getContext('2d');
 
+canvas.width = window.innerWidth
+canvas.heigh = window.innerHeight
 <style>
   html, body {
     margin: 0;
