additioanl changes to the line styling of our drawing canvas

--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -10,9 +10,11 @@
 </script>
 const canvas = document.querySelector('#draw');
 cont ctx = canvas.getContext('2d');
-
-canvas.width = window.innerWidth
-canvas.heigh = window.innerHeight
+canvas.width = window.innerWidth;
+canvas.heigh = window.innerHeight;
+ctx.strokeStyle = '#BADA55';
+ctx.lineJoin = 'round';
+ctx.lineCap = 'round';
 <style>
   html, body {
     margin: 0;
