--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -7,14 +7,32 @@
 <body>
 <canvas id="draw" width="800" height="800"></canvas>
 <script>
-</script>
 const canvas = document.querySelector('#draw');
-cont ctx = canvas.getContext('2d');
+const ctx = canvas.getContext('2d');
+
 canvas.width = window.innerWidth;
 canvas.heigh = window.innerHeight;
+
 ctx.strokeStyle = '#BADA55';
 ctx.lineJoin = 'round';
 ctx.lineCap = 'round';
+
+let isDrawing = false;
+let lastX = 0;
+let lastY = 0;
+
+function draw(e) {
+  if(!isDrawing) return; // stops the function from running when they are not mouse down
+  console.log(e);
+}
+
+canvas.addEventListener('mousemove', draw);
+canvas.addEventListener('mousedown', () => isDrawing = true)
+canvas.addEventListener('mouseup', () => isDrawing = false)
+canvas.addEventListener('mouseout', () => isDrawing = true)
+
+</script>
+
 <style>
   html, body {
     margin: 0;
