added a small fix to mouse out

--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -29,7 +29,7 @@ function draw(e) {
 canvas.addEventListener('mousemove', draw);
 canvas.addEventListener('mousedown', () => isDrawing = true)
 canvas.addEventListener('mouseup', () => isDrawing = false)
-canvas.addEventListener('mouseout', () => isDrawing = true)
+canvas.addEventListener('mouseout', () => isDrawing = false)
 
 </script>
 
