added some neat tricks to styling the console loges

--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -18,10 +18,15 @@
     }
 
     // Regular
+    console.log('hello');
 
     // Interpolated
+    console.log('Hello I am a %s string!', 'tyler')
+
+      // console.log(`Hello I am ${var}`) # ES6
 
     // Styled
+    console.log('%c I am some great text', 'font-size: 20px; background: red;')
 
     // warning!
 
