additional cool tricks such as console.dir(element)

--- a/09 - Dev Tools Domination/index-START.html
+++ b/09 - Dev Tools Domination/index-START.html
@@ -29,18 +29,26 @@
     console.log('%c I am some great text', 'font-size: 20px; background: red;')
 
     // warning!
+    console.warn('warning');
 
     // Error :|
+    console.error('error');
 
     // Info
+    console.info('info');
 
     // Testing
+    console.assert(1 === 1, 'that is wrong');
+      // console.assert will only run if something is wrong
 
     // clearing
+    // console.clear();
 
     // Viewing DOM Elements
+    console.dir(p); // Shows you everything you can do on the properties and methods that lives on the element
 
     // Grouping together
+    
 
     // counting
 
