added an event listener for clicking on the checkbox

--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -96,6 +96,12 @@
   </div>
 
 <script>
+function handleCheck(e){
+  console.log(e)
+};
+const checkboxes = document.querySelectorAll('.inbox input[type = "checkbox"]');
+
+checkboxes.forEach(checkbox => checkbox.addEventListener('click', handleCheck));
 </script>
 </body>
 </html>
