added iterations through the checkboxes

--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -96,8 +96,23 @@
   </div>
 
 <script>
+
+let lastChecked;
 function handleCheck(e){
-  console.log(e)
+  // Check if they had shift key down
+  // AND check that they are checking it
+  let inBetween = false;
+    if(e.shiftKey && this.checked){
+      // go ahead and do what we please
+      // loop over every single checkboxes
+      checkboxes.forEach(checkbox => {
+        console.log(checkbox);
+        if(checkbox === this || checkbox === lastChecked) {
+          inBetween = !inBetween
+        }
+    });
+}
+  lastChecked = e
 };
 const checkboxes = document.querySelectorAll('.inbox input[type = "checkbox"]');
 
