was able to loop through the checkboxes however it is getting the ones after the final shift click

--- a/10 - Hold Shift and Check Checkboxes/index-START.html
+++ b/10 - Hold Shift and Check Checkboxes/index-START.html
@@ -108,10 +108,16 @@ function handleCheck(e){
       checkboxes.forEach(checkbox => {
         console.log(checkbox);
         if(checkbox === this || checkbox === lastChecked) {
-          inBetween = !inBetween
+          inBetween = !inBetween;
+          console.log('starting to check them inbetween')
+        }
+
+        if(inBetween) {
+          checkbox.checked = true;
         }
     });
 }
+
   lastChecked = e
 };
 const checkboxes = document.querySelectorAll('.inbox input[type = "checkbox"]');
